@@ -62,6 +62,7 @@ struct router_rule {
     uint32_t prio;
     bool invert;
     bool ipv4;
+    bool user;
     uint8_t src_prefix;
     struct in6_addr from_addr;
     uint32_t lookup_table;
@@ -847,6 +848,7 @@ ovs_router_rules_show_json(struct json *rule_entries)
         struct json *entry = json_object_create();
 
         json_object_put(entry, "priority", json_integer_create(rule->prio));
+        json_object_put(entry, "user", json_integer_create(rule->user));
         json_object_put(entry, "invert", json_boolean_create(rule->invert));
         json_object_put(entry, "ipv4", json_boolean_create(rule->ipv4));
         json_object_put(entry, "src-prefix",
@@ -888,6 +890,19 @@ ovs_router_rules_show_text(struct ds *ds)
     struct router_rule *rule;
 
     PVECTOR_FOR_EACH (rule, &rules) {
+        if (rule->user) {
+            if (rule->ipv4) {
+                ds_put_format(ds, "User: ");
+            } else {
+                ds_put_format(ds, "User6: ");
+            }
+        } else {
+            if (rule->ipv4) {
+                ds_put_format(ds, "Cached: ");
+            } else {
+                ds_put_format(ds, "Cached6: ");
+            }
+        }
         ds_put_format(ds, "%"PRIu32": ", rule->prio);
         if (rule->invert) {
             ds_put_format(ds, "not ");
@@ -927,6 +942,168 @@ ovs_router_rules_show(struct unixctl_conn *conn, int argc OVS_UNUSED,
         ovs_router_rules_show_text(&ds);
         unixctl_command_reply(conn, ds_cstr(&ds));
         ds_destroy(&ds);
+    }
+}
+
+static void
+ovs_router_rule_add_cmd(struct unixctl_conn *conn, int argc OVS_UNUSED,
+                        const char *argv[] OVS_UNUSED, void *aux OVS_UNUSED)
+{
+    unsigned int src_len = 0;
+    struct in6_addr from;
+    bool invert = false;
+    bool ipv4 = true;
+    uint32_t prio = 0;
+    uint32_t table;
+    ovs_be32 ip;
+    int i = 1;
+
+    if (ovs_scan(argv[i], "-6")) {
+        ipv4 = false;
+        i++;
+    }
+    if (ovs_scan(argv[i], "not")) {
+        invert = true;
+        i++;
+    }
+
+    if (ovs_scan(argv[i], "from=all")) {
+        from = in6addr_any;
+    } else if (ovs_scan(argv[i], "from=")) {
+        const char *arg = &argv[i][strlen("from=")];
+
+        if (scan_ipv4_route(arg, &ip, &src_len)) {
+            in6_addr_set_mapped_ipv4(&from, ip);
+            ipv4 = true;
+        } else if (scan_ipv6_route(arg, &from, &src_len)) {
+            ipv4 = false;
+        } else {
+            unixctl_command_reply_error(conn, "Invalid from=ip/plen");
+            return;
+        }
+    } else {
+        unixctl_command_reply_error(conn, "Invalid 'from' parameter");
+        return;
+    }
+    if (argc <= ++i) {
+        unixctl_command_reply_error(conn, "Not enough arguments");
+        return;
+    }
+
+    if (ovs_scan(argv[i], "prio=%"SCNu32, &prio)) {
+        if (argc <= ++i) {
+            unixctl_command_reply_error(conn, "Not enough arguments");
+            return;
+        }
+    }
+
+    if (ovs_scan(argv[i], "table=local")) {
+        table = CLS_LOCAL;
+    } else if (ovs_scan(argv[i], "table=main")) {
+        table = CLS_MAIN;
+    } else if (ovs_scan(argv[i], "table=default")) {
+        table = CLS_DEFAULT;
+    } else if (!ovs_scan(argv[i], "table=%"SCNu32, &table)) {
+        unixctl_command_reply_error(conn, "Invalid 'table' format");
+        return;
+    }
+
+    ovs_mutex_lock(&mutex);
+    if (!prio) {
+        struct router_rule *rule;
+        uint32_t prev_prio = 0;
+
+        PVECTOR_FOR_EACH (rule, &rules) {
+            if ((!prio && rule->prio) ||
+                (rule->prio - prev_prio > 1)) {
+                prio = rule->prio - 1;
+            }
+            prev_prio = rule->prio;
+        }
+    }
+    ovs_router_rule_add(prio, invert, true, src_len, &from, table, ipv4);
+    ovs_mutex_unlock(&mutex);
+
+    unixctl_command_reply(conn, "OK");
+}
+
+static void
+ovs_router_rule_del_cmd(struct unixctl_conn *conn, int argc OVS_UNUSED,
+                        const char *argv[] OVS_UNUSED, void *aux OVS_UNUSED)
+{
+    unsigned int src_len = 0;
+    struct in6_addr from;
+    bool invert = false;
+    bool ipv4 = true;
+    uint32_t prio = 0;
+    uint32_t table;
+    ovs_be32 ip;
+    int i = 1;
+    int err;
+
+    if (ovs_scan(argv[i], "-6")) {
+        ipv4 = false;
+        i++;
+    }
+    if (ovs_scan(argv[i], "not")) {
+        invert = true;
+        i++;
+    }
+
+    if (ovs_scan(argv[i], "from=all")) {
+        from = in6addr_any;
+    } else if (ovs_scan(argv[i], "from=")) {
+        const char *arg = &argv[i][strlen("from=")];
+
+        if (scan_ipv4_route(arg, &ip, &src_len)) {
+            in6_addr_set_mapped_ipv4(&from, ip);
+            ipv4 = true;
+        } else if (scan_ipv6_route(arg, &from, &src_len)) {
+            ipv4 = false;
+        } else {
+            unixctl_command_reply_error(conn, "Invalid from=ip/plen");
+            return;
+        }
+    } else {
+        unixctl_command_reply_error(conn, "Invalid 'from' parameter");
+        return;
+    }
+    if (argc <= ++i) {
+        unixctl_command_reply_error(conn, "Not enough arguments");
+        return;
+    }
+
+    if (ovs_scan(argv[i], "prio=%"SCNu32, &prio)) {
+        if (argc <= ++i) {
+            unixctl_command_reply_error(conn, "Not enough arguments");
+            return;
+        }
+    }
+
+    if (ovs_scan(argv[i], "table=local")) {
+        table = CLS_LOCAL;
+    } else if (ovs_scan(argv[i], "table=main")) {
+        table = CLS_MAIN;
+    } else if (ovs_scan(argv[i], "table=default")) {
+        table = CLS_DEFAULT;
+    } else if (!ovs_scan(argv[i], "table=%"SCNu32, &table)) {
+        unixctl_command_reply_error(conn, "Invalid 'table' format");
+        return;
+    }
+
+    ovs_mutex_lock(&mutex);
+    err = ovs_router_rule_del(prio, invert, src_len, &from, table, ipv4);
+    ovs_mutex_unlock(&mutex);
+
+    if (err) {
+        struct ds ds = DS_EMPTY_INITIALIZER;
+
+        ds_put_format(&ds, "Failed to delete router rule: %d (%s)", err,
+                      ovs_strerror(err));
+        unixctl_command_reply_error(conn, ds_cstr_ro(&ds));
+        ds_destroy(&ds);
+    } else {
+        unixctl_command_reply(conn, "OK");
     }
 }
 
@@ -1030,9 +1207,10 @@ static void
 init_standard_rules(void)
 {
     /* Add default rules using same priorities as Linux kernel does. */
-    ovs_router_rule_add(0, false, 0, &in6addr_any, CLS_LOCAL, true);
-    ovs_router_rule_add(0x7FFE, false, 0, &in6addr_any, CLS_MAIN, true);
-    ovs_router_rule_add(0x7FFF, false, 0, &in6addr_any, CLS_DEFAULT, true);
+    ovs_router_rule_add(0, false, false, 0, &in6addr_any, CLS_LOCAL, true);
+    ovs_router_rule_add(0x7FFE, false, false, 0, &in6addr_any, CLS_MAIN, true);
+    ovs_router_rule_add(0x7FFF, false, false, 0, &in6addr_any, CLS_DEFAULT,
+                        true);
 }
 
 static void
@@ -1042,22 +1220,24 @@ rule_destroy_cb(struct router_rule *rule)
 }
 
 static void
-ovs_router_rules_flush_protected(void)
+ovs_router_rules_flush_protected(bool flush_all)
 {
     struct router_rule *rule;
 
     PVECTOR_FOR_EACH (rule, &rules) {
-        pvector_remove(&rules, rule);
-        ovsrcu_postpone(rule_destroy_cb, rule);
+        if (flush_all || !rule->user) {
+            pvector_remove(&rules, rule);
+            ovsrcu_postpone(rule_destroy_cb, rule);
+        }
     }
     pvector_publish(&rules);
 }
 
 void
-ovs_router_rules_flush(void)
+ovs_router_rules_flush(bool flush_all)
 {
     ovs_mutex_lock(&mutex);
-    ovs_router_rules_flush_protected();
+    ovs_router_rules_flush_protected(flush_all);
     ovs_mutex_unlock(&mutex);
 }
 
@@ -1065,7 +1245,7 @@ static void
 ovs_router_flush_handler(void *aux OVS_UNUSED)
 {
     ovs_mutex_lock(&mutex);
-    ovs_router_rules_flush_protected();
+    ovs_router_rules_flush_protected(true);
     ovs_router_flush_protected(true);
     pvector_destroy(&rules);
     ovs_assert(cmap_is_empty(&clsmap));
@@ -1107,14 +1287,16 @@ rule_pvec_prio(uint32_t prio)
 }
 
 void
-ovs_router_rule_add(uint32_t prio, bool invert, uint8_t src_len,
+ovs_router_rule_add(uint32_t prio, bool invert, bool user, uint8_t src_len,
                     const struct in6_addr *from, uint32_t lookup_table,
                     bool ipv4)
+    OVS_REQUIRES(mutex)
 {
     struct router_rule *rule = xzalloc(sizeof *rule);
 
     rule->prio = prio;
     rule->invert = invert;
+    rule->user = user;
     rule->src_prefix = src_len;
     rule->from_addr = *from;
     rule->lookup_table = lookup_table;
@@ -1122,6 +1304,35 @@ ovs_router_rule_add(uint32_t prio, bool invert, uint8_t src_len,
 
     pvector_insert(&rules, rule, rule_pvec_prio(prio));
     pvector_publish(&rules);
+}
+
+int
+ovs_router_rule_del(uint32_t prio, bool invert, uint8_t src_len,
+                    const struct in6_addr *from, uint32_t lookup_table,
+                    bool ipv4)
+    OVS_REQUIRES(mutex)
+{
+    struct router_rule *rule;
+
+    PVECTOR_FOR_EACH (rule, &rules) {
+        if (prio && rule->prio > prio) {
+            break;
+        }
+        if (rule->user
+            && rule->invert == invert
+            && (!prio || rule->prio == prio)
+            && rule->ipv4 == ipv4
+            && rule->src_prefix == src_len
+            && ipv6_addr_equals(&rule->from_addr, from)
+            && rule->lookup_table == lookup_table) {
+            pvector_remove(&rules, rule);
+            ovsrcu_postpone(rule_destroy_cb, rule);
+            pvector_publish(&rules);
+            return 0;
+        }
+    }
+
+    return -ENOENT;
 }
 
 void
@@ -1149,6 +1360,14 @@ ovs_router_init(void)
                                  ovs_router_lookup_cmd, NULL);
         unixctl_command_register("ovs/route/rule/show", "", 0, 0,
                                  ovs_router_rules_show, NULL);
+        unixctl_command_register("ovs/route/rule/add",
+                                 "[-6] [not] from=all|ip/plen [prio=num] "
+                                 "table=local|main|default|id",
+                                 2, 5, ovs_router_rule_add_cmd, NULL);
+        unixctl_command_register("ovs/route/rule/del",
+                                 "[-6] [not] from=all|ip/plen [prio=num] "
+                                 "table=local|main|default|id",
+                                 2, 5, ovs_router_rule_del_cmd, NULL);
         ovsthread_once_done(&once);
     }
 }
